Refactor application architecture and update related implementations